// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum ContainerazureClusterStateEnum {
  ContainerazureClusterStateEnumNO_VALUE_DO_NOT_USE = 0;
  ContainerazureClusterStateEnumSTATE_UNSPECIFIED = 1;
  ContainerazureClusterStateEnumPROVISIONING = 2;
  ContainerazureClusterStateEnumRUNNING = 3;
  ContainerazureClusterStateEnumRECONCILING = 4;
  ContainerazureClusterStateEnumSTOPPING = 5;
  ContainerazureClusterStateEnumERROR = 6;
  ContainerazureClusterStateEnumDEGRADED = 7;
}

message ContainerazureCluster {
  string name = 1;
  string description = 2;
  string azure_region = 3;
  string resource_group_id = 4;
  string client = 5;
  ContainerazureClusterNetworking networking = 6;
  ContainerazureClusterControlPlane control_plane = 7;
  ContainerazureClusterAuthorization authorization = 8;
  ContainerazureClusterStateEnum state = 9;
  string endpoint = 10;
  string uid = 11;
  bool reconciling = 12;
  string create_time = 13;
  string update_time = 14;
  string etag = 15;
  map<string, string> annotations = 16;
  ContainerazureClusterWorkloadIdentityConfig workload_identity_config = 17;
  string project = 18;
  string location = 19;
  ContainerazureClusterFleet fleet = 20;
}

message ContainerazureClusterNetworking {
  string virtual_network_id = 1;
  repeated string pod_address_cidr_blocks = 2;
  repeated string service_address_cidr_blocks = 3;
}

message ContainerazureClusterControlPlane {
  string version = 1;
  string subnet_id = 2;
  string vm_size = 3;
  ContainerazureClusterControlPlaneSshConfig ssh_config = 4;
  ContainerazureClusterControlPlaneRootVolume root_volume = 5;
  ContainerazureClusterControlPlaneMainVolume main_volume = 6;
  ContainerazureClusterControlPlaneDatabaseEncryption database_encryption = 7;
  map<string, string> tags = 8;
  ContainerazureClusterControlPlaneProxyConfig proxy_config = 9;
  repeated ContainerazureClusterControlPlaneReplicaPlacements replica_placements = 10;
}

message ContainerazureClusterControlPlaneSshConfig {
  string authorized_key = 1;
}

message ContainerazureClusterControlPlaneRootVolume {
  int64 size_gib = 1;
}

message ContainerazureClusterControlPlaneMainVolume {
  int64 size_gib = 1;
}

message ContainerazureClusterControlPlaneDatabaseEncryption {
  string key_id = 1;
}

message ContainerazureClusterControlPlaneProxyConfig {
  string resource_group_id = 1;
  string secret_id = 2;
}

message ContainerazureClusterControlPlaneReplicaPlacements {
  string subnet_id = 1;
  string azure_availability_zone = 2;
}

message ContainerazureClusterAuthorization {
  repeated ContainerazureClusterAuthorizationAdminUsers admin_users = 1;
}

message ContainerazureClusterAuthorizationAdminUsers {
  string username = 1;
}

message ContainerazureClusterWorkloadIdentityConfig {
  string issuer_uri = 1;
  string workload_pool = 2;
  string identity_provider = 3;
}

message ContainerazureClusterFleet {
  string project = 1;
  string membership = 2;
}

message ApplyContainerazureClusterRequest {
  ContainerazureCluster resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteContainerazureClusterRequest {
  string service_account_file = 1;
  ContainerazureCluster resource = 2;
}

message ListContainerazureClusterRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListContainerazureClusterResponse {
  repeated ContainerazureCluster items = 1;
}

service ContainerazureClusterService {
  rpc ApplyContainerazureCluster(ApplyContainerazureClusterRequest) returns (ContainerazureCluster);
  rpc DeleteContainerazureCluster(DeleteContainerazureClusterRequest) returns (google.protobuf.Empty);
  rpc ListContainerazureCluster(ListContainerazureClusterRequest) returns (ListContainerazureClusterResponse);
}
