// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum VmwareAlphaPrivateCloudStateEnum {
  VmwareAlphaPrivateCloudStateEnumNO_VALUE_DO_NOT_USE = 0;
  VmwareAlphaPrivateCloudStateEnumACTIVE = 1;
  VmwareAlphaPrivateCloudStateEnumCREATING = 2;
  VmwareAlphaPrivateCloudStateEnumUPDATING = 3;
  VmwareAlphaPrivateCloudStateEnumFAILED = 4;
  VmwareAlphaPrivateCloudStateEnumDELETED = 5;
}

enum VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnum {
  VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnumNO_VALUE_DO_NOT_USE = 0;
  VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnumIP_ADDRESS_LAYOUT_VERSION_UNSPECIFIED = 1;
  VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnumVERSION_1 = 2;
  VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnumVERSION_2 = 3;
}

enum VmwareAlphaPrivateCloudHcxStateEnum {
  VmwareAlphaPrivateCloudHcxStateEnumNO_VALUE_DO_NOT_USE = 0;
  VmwareAlphaPrivateCloudHcxStateEnumSTATE_UNSPECIFIED = 1;
  VmwareAlphaPrivateCloudHcxStateEnumACTIVE = 2;
  VmwareAlphaPrivateCloudHcxStateEnumCREATING = 3;
  VmwareAlphaPrivateCloudHcxStateEnumUPDATING = 4;
  VmwareAlphaPrivateCloudHcxStateEnumFAILED = 5;
  VmwareAlphaPrivateCloudHcxStateEnumDELETED = 6;
  VmwareAlphaPrivateCloudHcxStateEnumPURGING = 7;
}

enum VmwareAlphaPrivateCloudNsxStateEnum {
  VmwareAlphaPrivateCloudNsxStateEnumNO_VALUE_DO_NOT_USE = 0;
  VmwareAlphaPrivateCloudNsxStateEnumSTATE_UNSPECIFIED = 1;
  VmwareAlphaPrivateCloudNsxStateEnumACTIVE = 2;
  VmwareAlphaPrivateCloudNsxStateEnumCREATING = 3;
  VmwareAlphaPrivateCloudNsxStateEnumUPDATING = 4;
  VmwareAlphaPrivateCloudNsxStateEnumFAILED = 5;
  VmwareAlphaPrivateCloudNsxStateEnumDELETED = 6;
  VmwareAlphaPrivateCloudNsxStateEnumPURGING = 7;
}

enum VmwareAlphaPrivateCloudVcenterStateEnum {
  VmwareAlphaPrivateCloudVcenterStateEnumNO_VALUE_DO_NOT_USE = 0;
  VmwareAlphaPrivateCloudVcenterStateEnumSTATE_UNSPECIFIED = 1;
  VmwareAlphaPrivateCloudVcenterStateEnumACTIVE = 2;
  VmwareAlphaPrivateCloudVcenterStateEnumCREATING = 3;
  VmwareAlphaPrivateCloudVcenterStateEnumUPDATING = 4;
  VmwareAlphaPrivateCloudVcenterStateEnumFAILED = 5;
  VmwareAlphaPrivateCloudVcenterStateEnumDELETED = 6;
  VmwareAlphaPrivateCloudVcenterStateEnumPURGING = 7;
}

message VmwareAlphaPrivateCloud {
  string name = 1;
  string create_time = 2;
  string update_time = 3;
  string delete_time = 4;
  string expire_time = 5;
  VmwareAlphaPrivateCloudStateEnum state = 6;
  VmwareAlphaPrivateCloudNetworkConfig network_config = 7;
  VmwareAlphaPrivateCloudManagementCluster management_cluster = 8;
  string description = 9;
  repeated VmwareAlphaPrivateCloudConditions conditions = 10;
  VmwareAlphaPrivateCloudHcx hcx = 11;
  VmwareAlphaPrivateCloudNsx nsx = 12;
  VmwareAlphaPrivateCloudVcenter vcenter = 13;
  string project = 14;
  string location = 15;
  string uid = 16;
  string etag = 17;
}

message VmwareAlphaPrivateCloudNetworkConfig {
  string network = 1;
  string service_network = 2;
  string management_cidr = 3;
  string vmware_engine_network = 4;
  string vmware_engine_network_canonical = 5;
  VmwareAlphaPrivateCloudNetworkConfigIPAddressLayoutVersionEnum ip_address_layout_version = 6;
}

message VmwareAlphaPrivateCloudManagementCluster {
  string cluster_id = 1;
  string node_type_id = 2;
  int64 node_count = 3;
  int64 node_custom_core_count = 4;
}

message VmwareAlphaPrivateCloudConditions {
  string code = 1;
  string message = 2;
}

message VmwareAlphaPrivateCloudHcx {
  string fdqn = 1;
  string internal_ip = 2;
  string external_ip = 3;
  string version = 4;
  VmwareAlphaPrivateCloudHcxStateEnum state = 5;
  string fqdn = 6;
}

message VmwareAlphaPrivateCloudNsx {
  string fdqn = 1;
  string internal_ip = 2;
  string external_ip = 3;
  string version = 4;
  VmwareAlphaPrivateCloudNsxStateEnum state = 5;
  string fqdn = 6;
}

message VmwareAlphaPrivateCloudVcenter {
  string fdqn = 1;
  string internal_ip = 2;
  string external_ip = 3;
  string version = 4;
  VmwareAlphaPrivateCloudVcenterStateEnum state = 5;
  string fqdn = 6;
}

message ApplyVmwareAlphaPrivateCloudRequest {
  VmwareAlphaPrivateCloud resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteVmwareAlphaPrivateCloudRequest {
  string service_account_file = 1;
  VmwareAlphaPrivateCloud resource = 2;
}

message ListVmwareAlphaPrivateCloudRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListVmwareAlphaPrivateCloudResponse {
  repeated VmwareAlphaPrivateCloud items = 1;
}

service VmwareAlphaPrivateCloudService {
  rpc ApplyVmwareAlphaPrivateCloud(ApplyVmwareAlphaPrivateCloudRequest) returns (VmwareAlphaPrivateCloud);
  rpc DeleteVmwareAlphaPrivateCloud(DeleteVmwareAlphaPrivateCloudRequest) returns (google.protobuf.Empty);
  rpc ListVmwareAlphaPrivateCloud(ListVmwareAlphaPrivateCloudRequest) returns (ListVmwareAlphaPrivateCloudResponse);
}
